[package]
name = "danisen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
uuid = {version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"]}
quaint = {version = "0.1.13", features = ["pooled", "sqlite"]}
tokio = {version = "1.0", features = ["full"] }
